# backend/internal/api/router/router.go
@@ -31,8 +31,8 @@ func Router() *http.ServeMux {
 	mux.HandleFunc("PATCH /teachers/{id}", handlers.PatchOneTeacherByIdHandler)
 	mux.HandleFunc("DELETE /teachers/{id}", handlers.DeleteOneTeacherByIdHandler)
 
-	// mux.HandleFunc("GET /teachers/{id}/students", handlers.GetTeacherStudentsHandler)
-	// mux.HandleFunc("GET /teachers/{id}/studentcount", handlers.GetTeacherStudentCountHandler)
+	mux.HandleFunc("GET /teachers/{id}/students", handlers.GetTeacherStudentsHandler)
+	mux.HandleFunc("GET /teachers/{id}/studentcount", handlers.GetTeacherStudentCountHandler)
 
 	mux.HandleFunc("GET /students", handlers.GetStudentsHandler)
 	mux.HandleFunc("POST /students", handlers.AddStudentHandler)
